--- a/pubs.bib
+++ b/pubs.bib
@@ -1064,4 +1064,15 @@
   publisher = {Elsevier {BV}},
 }
 
+@Article{Marcineketal:2021,
+  author    = {Sa{\v{s}}a Marcinek and Arnaud Chapoulie and Pascal Salaün and Scott Smith and Dario Omanovi{\'{c}}},
+  journal   = {Talanta},
+  title     = {Revised application of copper ion selective electrode (Cu-{ISE}) in marine waters: a new meta-calibration approach},
+  year      = {2021},
+  month     = {feb},
+  pages     = {122170},
+  doi       = {10.1016/j.talanta.2021.122170},
+  publisher = {Elsevier {BV}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
