--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1086,4 +1086,16 @@
   publisher    = {Wiley},
 }
 
+@Article{Shermanetal:2021,
+  author    = {S. Sherman and W. Chen and T.A. Blewett and S. Smith and E. Middleton and E. Garman and C. Schlekat and J.C. McGeer},
+  journal   = {Ecotoxicology and Environmental Safety},
+  title     = {Complexation reduces nickel toxicity to purple sea urchin embryos (Strongylocentrotus purpuratus), a test of biotic ligand principles in seawater},
+  year      = {2021},
+  month     = {jun},
+  pages     = {112156},
+  volume    = {216},
+  doi       = {10.1016/j.ecoenv.2021.112156},
+  publisher = {Elsevier {BV}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
