--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1087,9 +1087,9 @@
 }
 
 @Article{Shermanetal:2021,
-  author    = {S. Sherman and W. Chen and T.A. Blewett and S. Smith and E. Middleton and E. Garman and C. Schlekat and J.C. McGeer},
+  author    = {Sherman, Samantha and Chen, Weibin and Blewett, T. A. and Smith, D. Scott and Middleton, E. and Garman, E. and Schlekat, C. and McGeer, J. C.},
   journal   = {Ecotoxicology and Environmental Safety},
-  title     = {Complexation reduces nickel toxicity to purple sea urchin embryos (Strongylocentrotus purpuratus), a test of biotic ligand principles in seawater},
+  title     = {Complexation reduces nickel toxicity to purple sea urchin embryos ({Strongylocentrotus purpuratus}), a test of biotic ligand principles in seawater},
   year      = {2021},
   month     = {jun},
   pages     = {112156},
