--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1090,4 +1090,19 @@
   doi     = {10.1016/j.talanta.2021.122170},
 }
 
+@Article{,
+}
+
+@Article{Johannssonetal:2021,
+  author    = {Ora E. Johannsson and Marcio S. Ferreira and D. Scott Smith and Chris M. Wood and Adalberto L. Val},
+  journal   = {Water Research},
+  title     = {Interplay of oxygen and light in the photo-oxidation of dissolved organic carbon},
+  year      = {2021},
+  month     = {aug},
+  pages     = {117332},
+  volume    = {201},
+  doi       = {10.1016/j.watres.2021.117332},
+  publisher = {Elsevier {BV}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
