update two pubs

--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1105,4 +1105,20 @@
   publisher = {Elsevier {BV}},
 }
 
+@Article{Sadauskas-Henriqueetal:2021,
+  author  = {Helen Sadauskas-Henrique and D. Scott Smith and Adalberto L. Val and Chris M Wood},
+  journal = {Journal of Experimental Zoology Part A: Ecological Genetics and Physiology},
+  title   = {Physicochemical properties of the dissolved organic carbon can lead to different physiological responses of zebrafish (<i>Danio rerio</i>) under neutral and acidic conditions},
+  year    = {2021},
+  doi     = {10.1002/jez.2537},
+}
+
+@Article{Blewettetal:2021,
+  author  = {Blewett, T. A. and Leonard, E. M. and Glvoer, C. N. and Wood, C. M. and McGeer, J. M. and Santore, R. C. and Smith, D. S.},
+  journal = {Comparative Biochemistry and Physiology, Part C},
+  title   = {The effect of marine dissolved organic carbon on nickel accumulation in early life-stages of the sea urchin, Strongylocentrotus purpuratus},
+  year    = {2021},
+  doi     = {10.1016/j.cbpc.2021.109150},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
