--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1128,15 +1128,13 @@
   publisher = {Research Square Platform {LLC}},
 }
 
-@Article{Chen2021,
-  author    = {Weibin Chen and C{\'{e}}line Gu{\'{e}}guen and D. Scott Smith and Josep Galceran and Jaume Puy and Encarna Companys},
-  journal   = {Colloids and Surfaces A: Physicochemical and Engineering Aspects},
-  title     = {Comparing a Fully Optimized {ContinUouS} ({FOCUS}) method with the analytical inversion of Non Ideal Competitive Adsorption ({NICA}) for determining the conditional affinity spectrum ({CAS}) of H and Pb binding to natural organic matter},
-  year      = {2021},
-  month     = {oct},
-  pages     = {127785},
-  doi       = {10.1016/j.colsurfa.2021.127785},
-  publisher = {Elsevier {BV}},
+@Article{Chenetal:2021,
+  author  = {Weibin Chen and C{\'{e}}line Gu{\'{e}}guen and D. Scott Smith and Josep Galceran and Jaume Puy and Encarna Companys},
+  journal = {Colloids and Surfaces A: Physicochemical and Engineering Aspects},
+  title   = {Comparing a Fully Optimized {ContinUouS} ({FOCUS}) method with the analytical inversion of Non Ideal Competitive Adsorption ({NICA}) for determining the conditional affinity spectrum ({CAS}) of H and Pb binding to natural organic matter},
+  year    = {2021},
+  pages   = {127785},
+  doi     = {10.1016/j.colsurfa.2021.127785},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
