--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1,4 +1,3 @@
-% Encoding: UTF-8
 @comment{x-kbibtex-encoding=windows-1252}
 
 @article{Al-Reasi:2013a,
@@ -1129,12 +1128,29 @@
 }
 
 @Article{Chenetal:2021,
-  author  = {Weibin Chen and C{\'{e}}line Gu{\'{e}}guen and D. Scott Smith and Josep Galceran and Jaume Puy and Encarna Companys},
-  journal = {Colloids and Surfaces A: Physicochemical and Engineering Aspects},
-  title   = {Comparing a Fully Optimized {ContinUouS} ({FOCUS}) method with the analytical inversion of Non Ideal Competitive Adsorption ({NICA}) for determining the conditional affinity spectrum ({CAS}) of H and Pb binding to natural organic matter},
-  year    = {2021},
-  pages   = {127785},
-  doi     = {10.1016/j.colsurfa.2021.127785},
+  author    = {Weibin Chen and C{\'{e}}line Gu{\'{e}}guen and D. Scott Smith and Josep Galceran and Jaume Puy and Encarna Companys},
+  journal   = {Colloids and Surfaces A: Physicochemical and Engineering Aspects},
+  title     = {Comparing a Fully Optimized {ContinUouS} ({FOCUS}) method with the analytical inversion of Non Ideal Competitive Adsorption ({NICA}) for determining the conditional affinity spectrum ({CAS}) of H and Pb binding to natural organic matter},
+  year      = {2021},
+  month     = {oct},
+  pages     = {127785},
+  doi       = {10.1016/j.colsurfa.2021.127785},
+  publisher = {Elsevier {BV}},
+}
+
+@Article{Jindoetal:2023,
+  author   = {Jindo, Keiji and Audette, Yuki and Olivares, Fabio Lopez and Canellas, Luciano Pasqualoto and Smith, D. Scott and Paul Voroney, R.},
+  journal  = {Chemical and Biological Technologies in Agriculture},
+  title    = {Biotic and abiotic effects of soil organic matter on the phytoavailable phosphorus in soils: a review},
+  year     = {2023},
+  issn     = {2196-5641},
+  number   = {1},
+  pages    = {29},
+  volume   = {10},
+  abstract = {Soil organic matter (SOM) has a critical role in regulating soil phosphorus (P) dynamics and producing phytoavailable P. However, soil P dynamics are often explained mainly by the effects of soil pH, clay contents, and elemental compositions, such as calcium, iron, and aluminum. Therefore, a better understanding of the mechanisms of how SOM influences phytoavailable P in soils is required for establishing effective agricultural management for soil health and enhancement of soil fertility, especially P-use efficiency. In this review, the following abiotic and biotic mechanisms are discussed; (1) competitive sorption between SOM with P for positively charged adsorption sites of clays and metal oxides (abiotic reaction), (2) competitive complexations between SOM with P for cations (abiotic reaction), (3) competitive complexations between incorporation of P by binary complexations of SOM and bridging cations with the formation of stable P minerals (abiotic reaction), (4) enhanced activities of enzymes, which affects soil P dynamics (biotic reaction), (5) mineralization/immobilization of P during the decay of SOM (biotic reaction), and (6) solubilization of inorganic P mediated by organic acids released by microbes (biotic reaction).},
+  doi      = {10.1186/s40538-023-00401-y},
+  refid    = {Jindo2023},
+  url      = {https://doi.org/10.1186/s40538-023-00401-y},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
