--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1166,4 +1166,13 @@
   publisher = {Elsevier {BV}},
 }
 
+@Article{ElAlemetal:2023,
+  author    = {Anas El Alem and Karem Chokmani and Aarthi Venkatesan and Rachid Lhissou and Sarah Martins and Peter Campbell and Jeffrey Cardille and James McGeer and D. Scott Smith},
+  journal   = {SSRN},
+  title     = {Modeling Dissolved Organic Carbon in Inland Waters Using an Unmanned Aerial Vehicles-Borne Hyperspectral Camera},
+  year      = {2023},
+  doi       = {10.2139/ssrn.4500576},
+  publisher = {Elsevier {BV}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
