--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,5 @@
 % Encoding: UTF-8
+
 @comment{x-kbibtex-encoding=windows-1252}
 
 @article{Al-Reasi:2013a,
@@ -1064,15 +1065,17 @@
   publisher = {Elsevier {BV}},
 }
 
-@Article{Marcineketal:2021,
-  author    = {Sa{\v{s}}a Marcinek and Arnaud Chapoulie and Pascal Salaün and Scott Smith and Dario Omanovi{\'{c}}},
-  journal   = {Talanta},
-  title     = {Revised application of copper ion selective electrode (Cu-{ISE}) in marine waters: a new meta-calibration approach},
-  year      = {2021},
-  month     = {feb},
-  pages     = {122170},
-  doi       = {10.1016/j.talanta.2021.122170},
-  publisher = {Elsevier {BV}},
+@Article{Morris2024,
+  author    = {Morris, Carolyn and Zulian, Samantha and Brauner, Colin J. and Wood, Chris M. and Smith, D. Scott},
+  journal   = {Environmental Chemistry},
+  title     = {A critical assessment of physicochemical indices used to characterise natural dissolved organic carbon (DOC), their inter-relationships, and the effects of pH},
+  year      = {2024},
+  issn      = {1448-2517},
+  number    = {4},
+  pages     = {NULL},
+  volume    = {21},
+  doi       = {10.1071/en24021},
+  publisher = {CSIRO Publishing},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
