--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1179,4 +1179,12 @@
   publisher = {CSIRO Publishing},
 }
 
+@Article{Morrisetal:2024,
+  author  = {Morris, C. and Martins, C. and Zulian, S. And Smith, D. S. and Brauner, C. J. and Wood, C. M.},
+  journal = {Journal of Comparative Physiology B},
+  title   = {The effects of dissolved organic carbon and model compounds (DOC analogues) on diffusive water flux, oxygen consumption, nitrogenous waste excretion rates and gill transepithelial potential in Pacific sanddab (<i>Citharichthys sordidus</i>) at two salinities.},
+  year    = {2024},
+  doi     = {10.1007/s00360-024-01580-2},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
