update pub list

--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1187,4 +1187,16 @@
   doi     = {10.1007/s00360-024-01580-2},
 }
 
+@Article{Hourtane2024,
+  author    = {Hourtané, Océane and Smith, D. Scott and Fortin, Claude},
+  journal   = {Chemosphere},
+  title     = {Natural organic matter (NOM) can increase the uptake fluxes of three critical metals (Ga, La, Pt) in a unicellular green alga},
+  year      = {2024},
+  issn      = {0045-6535},
+  month     = sep,
+  pages     = {143311},
+  doi       = {10.1016/j.chemosphere.2024.143311},
+  publisher = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
