fix citation key

--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1166,7 +1166,7 @@
   publisher = {Elsevier {BV}},
 }
 
-@Article{Morris2024,
+@Article{Morrisetal:2024a,
   author    = {Morris, Carolyn and Zulian, Samantha and Brauner, Colin J. and Wood, Chris M. and Smith, D. Scott},
   journal   = {Environmental Chemistry},
   title     = {A critical assessment of physicochemical indices used to characterise natural dissolved organic carbon (DOC), their inter-relationships, and the effects of pH},
@@ -1187,9 +1187,9 @@
   doi     = {10.1007/s00360-024-01580-2},
 }
 
-@Article{Hourtane2024,
+@Article{Alnimeretal:2024,
   author    = {Aseel A. Alnimer and D. Scott Smith and Wayne J. Parker},
-  journal = {Journal of Comparative Physiology B},
+  journal   = {Journal of Comparative Physiology B},
   title     = {Phosphorus release and recovery by reductive dissolution of chemically precipitated phosphorus from simulated wastewater},
   year      = {2024},
   issn      = {0045-6535},
@@ -1199,7 +1199,7 @@
   publisher = {Elsevier {BV}},
 }
 
-@Article{Hourtane2024a,
+@Article{Hourtaneetal:2024,
   author    = {Hourtané, Océane and Smith, D. Scott and Fortin, Claude},
   journal   = {Chemosphere},
   title     = {Natural organic matter (NOM) can increase the uptake fluxes of three critical metals (Ga, La, Pt) in a unicellular green alga},
