--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1211,4 +1211,13 @@
   publisher = {Elsevier BV},
 }
 
+@Article{ElAlemetal:2023,
+  author    = {El Alem, Anas and Chokmani, Karem and Venkatesan, Aarthi and Lhissou, Rachid and Martins, Sarah and Campbell, Peter and Cardille, Jeffrey and McGeer, James and Smith, D. S. Scott},
+  journal   = {SSRN},
+  title     = {Modeling Dissolved Organic Carbon in Inland Waters Using an Unmanned Aerial Vehicles-Borne Hyperspectral Camera},
+  year      = {2023},
+  doi       = {10.2139/ssrn.4500576},
+  publisher = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
