add STOTEN paper

--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1216,7 +1216,20 @@
   journal   = {SSRN},
   title     = {Modeling Dissolved Organic Carbon in Inland Waters Using an Unmanned Aerial Vehicles-Borne Hyperspectral Camera},
   year      = {2023},
+  note      = {PREPRINT: NOT PEER REVIEWED. PUBLISHED IN 2024 in STOTEN},
   doi       = {10.2139/ssrn.4500576},
+  publisher = {Elsevier BV},
+}
+
+@Article{ElAlem2024,
+  author    = {El Alem, Anas and Chokmani, Karem and Venkatesan, Aarthi and Lhissou, Rachid and Martins, Sarah and Campbell, Peter and Cardille, Jeffrey and McGeer, James and Smith, Scott},
+  journal   = {Science of The Total Environment},
+  title     = {Modeling dissolved organic carbon in inland waters using an unmanned aerial vehicles-borne hyperspectral camera},
+  year      = {2024},
+  issn      = {0048-9697},
+  month     = sep,
+  pages     = {176258},
+  doi       = {10.1016/j.scitotenv.2024.176258},
   publisher = {Elsevier BV},
 }
 
