add WATER RES ref

--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1233,4 +1233,17 @@
   publisher = {Elsevier BV},
 }
 
+@Article{Alnimer2024,
+  author    = {Alnimer, Aseel A. and Smith, D. Scott and Parker, Wayne J.},
+  journal   = {Water Environment Research},
+  title     = {Impact of organic matter constituents on phosphorus recovery from CPR sludges},
+  year      = {2024},
+  issn      = {1554-7531},
+  month     = oct,
+  number    = {10},
+  volume    = {96},
+  doi       = {10.1002/wer.11141},
+  publisher = {Wiley},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
