--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1246,4 +1246,18 @@
   publisher = {Wiley},
 }
 
+@Article{Morris2024,
+  author    = {Morris, Carolyn and Zulian, Samantha and Smith, D. Scott and Brauner, Colin J. and Wood, Chris M.},
+  journal   = {Fish Physiology and Biochemistry},
+  title     = {Using physicochemical properties to predict the impact of natural dissolved organic carbon on transepithelial potential in the freshwater rainbow trout (Oncorhynchus mykiss) at neutral and acidic pH},
+  year      = {2024},
+  issn      = {1573-5168},
+  month     = oct,
+  number    = {6},
+  pages     = {2619--2635},
+  volume    = {50},
+  doi       = {10.1007/s10695-024-01409-3},
+  publisher = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
