fix up pubs list

--- a/DSS_all_journal_pubs.bib
+++ b/DSS_all_journal_pubs.bib
@@ -1187,30 +1187,6 @@
   doi     = {10.1007/s00360-024-01580-2},
 }
 
-@Article{Alnimeretal:2024,
-  author    = {Aseel A. Alnimer and D. Scott Smith and Wayne J. Parker},
-  journal   = {Journal of Comparative Physiology B},
-  title     = {Phosphorus release and recovery by reductive dissolution of chemically precipitated phosphorus from simulated wastewater},
-  year      = {2024},
-  issn      = {0045-6535},
-  month     = {oct},
-  pages     = {140500},
-  doi       = {10.1016/j.chemosphere.2023.140500},
-  publisher = {Elsevier {BV}},
-}
-
-@Article{Hourtaneetal:2024,
-  author    = {Hourtané, Océane and Smith, D. Scott and Fortin, Claude},
-  journal   = {Chemosphere},
-  title     = {Natural organic matter (NOM) can increase the uptake fluxes of three critical metals (Ga, La, Pt) in a unicellular green alga},
-  year      = {2024},
-  issn      = {0045-6535},
-  month     = sep,
-  pages     = {143311},
-  doi       = {10.1016/j.chemosphere.2024.143311},
-  publisher = {Elsevier BV},
-}
-
 @Article{ElAlemetal:2023,
   author    = {El Alem, Anas and Chokmani, Karem and Venkatesan, Aarthi and Lhissou, Rachid and Martins, Sarah and Campbell, Peter and Cardille, Jeffrey and McGeer, James and Smith, D. S. Scott},
   journal   = {SSRN},
@@ -1218,18 +1194,6 @@
   year      = {2023},
   note      = {PREPRINT: NOT PEER REVIEWED. PUBLISHED IN 2024 in STOTEN},
   doi       = {10.2139/ssrn.4500576},
-  publisher = {Elsevier BV},
-}
-
-@Article{ElAlem2024,
-  author    = {El Alem, Anas and Chokmani, Karem and Venkatesan, Aarthi and Lhissou, Rachid and Martins, Sarah and Campbell, Peter and Cardille, Jeffrey and McGeer, James and Smith, Scott},
-  journal   = {Science of The Total Environment},
-  title     = {Modeling dissolved organic carbon in inland waters using an unmanned aerial vehicles-borne hyperspectral camera},
-  year      = {2024},
-  issn      = {0048-9697},
-  month     = sep,
-  pages     = {176258},
-  doi       = {10.1016/j.scitotenv.2024.176258},
   publisher = {Elsevier BV},
 }
 
@@ -1258,6 +1222,45 @@
   volume    = {50},
   doi       = {10.1007/s10695-024-01409-3},
   publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Alnimer2023,
+  author    = {Alnimer, Aseel A. and Smith, D. Scott and Parker, Wayne J.},
+  journal   = {Chemosphere},
+  title     = {Phosphorus release and recovery by reductive dissolution of chemically precipitated phosphorus from simulated wastewater},
+  year      = {2023},
+  issn      = {0045-6535},
+  month     = dec,
+  pages     = {140500},
+  volume    = {345},
+  doi       = {10.1016/j.chemosphere.2023.140500},
+  publisher = {Elsevier BV},
+}
+
+@Article{Hourtane2024,
+  author    = {Hourtané, Océane and Smith, D. Scott and Fortin, Claude},
+  journal   = {Chemosphere},
+  title     = {Natural organic matter (NOM) can increase the uptake fluxes of three critical metals (Ga, La, Pt) in a unicellular green alga},
+  year      = {2024},
+  issn      = {0045-6535},
+  month     = oct,
+  pages     = {143311},
+  volume    = {365},
+  doi       = {10.1016/j.chemosphere.2024.143311},
+  publisher = {Elsevier BV},
+}
+
+@Article{ElAlem2024,
+  author    = {El Alem, Anas and Chokmani, Karem and Venkatesan, Aarthi and Lhissou, Rachid and Martins, Sarah and Campbell, Peter and Cardille, Jeffrey and McGeer, James and Smith, Scott},
+  journal   = {Science of The Total Environment},
+  title     = {Modeling dissolved organic carbon in inland waters using an unmanned aerial vehicles-borne hyperspectral camera},
+  year      = {2024},
+  issn      = {0048-9697},
+  month     = dec,
+  pages     = {176258},
+  volume    = {954},
+  doi       = {10.1016/j.scitotenv.2024.176258},
+  publisher = {Elsevier BV},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
